Fix: Use aggressive autocomplete prevention to stop email autofill

--- a/Playerstoryteller MAIN/Ratlab Server/public/components/action-panel.html
+++ b/Playerstoryteller MAIN/Ratlab Server/public/components/action-panel.html
@@ -9,7 +9,7 @@
         <div class="flex flex-col gap-2">
             <div class="relative">
                 <input type="text" id="message-input" placeholder="TYPE TRANSMISSION..." maxlength="500"
-                    autocomplete="off"
+                    autocomplete="new-password" data-form-type="other"
                     class="w-full bg-black border border-rat-border text-rat-text p-3 pr-16 rounded focus:border-rat-green focus:ring-1 focus:ring-rat-green outline-none font-mono text-sm placeholder-rat-text-dim/50 transition-all">
                 <span class="absolute right-3 top-3 text-xs text-rat-text-dim font-mono"><span
                         id="char-count">0</span>/500</span>
